# graph-planarity

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: dual.rs  embedding.rs  euler.rs  kuratowski.rs  lib.rs  planarity.rs
